[package]
name = "lute-bot"
version = "0.1.0"
authors = ["Emmia <emmiasilk@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clean-path = "0.2.1"
poise = "0.5.7"
songbird =  { version = "0.3.2", features=["yt-dlp", "serenity"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
